--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
     androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.6.3'
     compile files('libs/agora-rtc-sdk.jar')
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.firebase:firebase-database:9.0.2'
+    compile 'com.google.firebase:firebase-core:9.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
